--- a/Assignments/Assignment-4/readme
+++ b/Assignments/Assignment-4/readme
@@ -1,1 +1,10 @@
 
+Known Issues with ROR encoding:
+
+  - When using "objdump" to pull opcodes for shellcodee testing with C Program the "\x37" opcode will not display when using this command:
+  
+      objdump -d Program.o | grep '[0-9a-f]:'|grep -v 'file'|cut -f2 -d:|cut -f1-6 -d' '|tr -s ' '|tr '\t' ' '|sed 's/ $//g'|sed 's/ /\\x/g'|paste -d '' -s |sed 's/^/"/'|sed 's/$/"/g'
+
+  This casued me a great deal of issues. After manually reviewing the opcodes using "objdump -d program.o -M intel" I was able to determine "\x37" was missing.
+  
+  
