--- a/Assignments/Assignment-7/readme
+++ b/Assignments/Assignment-7/readme
@@ -1,1 +1,21 @@
+GCC Usage:  gcc decrypter-two-fish.c -lmcrypt -ldl -o decrypter
+*
+Important Arguments:
+*
+*           -lmcrypt
+*           -ldl
+*
+
+The 2 arguments must be used to pull in the mcrypt encryption/decryption modules or errors will happen when you compile with GCC.
+
+Encrypter is using Two-Fish encryption and CFB Feedback cipher block which is basically CBC only in reverse.
+
+CFB Feedback Info:  https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_Feedback_(CFB)
+
+
+The shellcode used in the crypters is the encoding shellcode stub which uses the Exceve shellcode. This is from Assignemnt #4.
+
+
+
+
 
